--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
     <string name="app_name">Karaoke</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section2">Artists</string>
+    <string name="title_section3">Albums</string>
+    <string name="title_section1">Songs</string>
+    <string name="title_section4">Favorites</string>
 
     <string name="hello_world">Hello world!</string>
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_tabbed">TabbedActivity</string>
     <string name="title_activity_song_player">SongPlayerActivity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
